# cdbootstrap-operator

./: Cargo.toml  README.md  cdbootstrap-example.yaml  cdbootstraps.cnad.nl.yaml  inject_secrets.sh  remove.sh  run.sh
config/crd/: cdbootstraps.cnad.nl.yaml  cdbootstraps.cndev.nl.yaml  cdbootstraps.operators.cloud.yaml  cdbootstraps.wasm.cloud.yaml
config/samples/: cdbootstrap-example.yaml  update.yaml
src/: cdbootstrap.rs  crd.rs  finalizer.rs  lib.rs  main.rs  status.rs  subresources.rs  vault.rs
tests/: vault.rs  vault.sh
